# increment

./: .cursorrules  .gitignore  CLAUDE.md  DESIGN.md  LOGGING.md  PYTHON_DEV.md  README.md  REFACTOR_PLAN.md  SIMULATOR_COMMANDS.md  SWIFTDATA_MIGRATION.md  TESTING.md
.github/ISSUE_TEMPLATE/: general.yml
.github/workflows/: claude-code-review.yml  claude.yml  increment-tests.yml
.ruler/: AGENTS.md  ruler.toml
inboxy/: .env.example  .gitignore  README.md  TODO.md  clean.py  inboxy.py  pyproject.toml
inboxy/.ruler/: inboxy.md
inboxy/src/inboxy/: __init__.py  ai.py  cli.py  digest.py  gmail.py  models.py
increment/: PRD.md  README.md  TESTING.md
increment/Increment/: ContentView.swift  IncrementApp.swift  Info.plist  PersistenceManager.swift  RestTimer.swift  SessionManager.swift
increment/Increment.xcodeproj/: project.pbxproj
increment/IncrementProject/: CLAUDE.md  LIVE_ACTIVITIES_IMPLEMENTATION.md  README.md  SESSION_FLOW_REDESIGN.md  WIDGET_SETUP_INSTRUCTIONS.md
increment/IncrementProject/Config/: Increment.entitlements  Shared.xcconfig  Tests.xcconfig
increment/IncrementProject/Increment/: ContentView.swift  Increment.xctestplan  IncrementApp.swift  Models.swift  PersistenceManager.swift  PreWorkoutFlowViews.swift  RestTimer.swift  SessionIntroView.swift  SessionManager.swift  SessionReviewViews.swift  WarmupView.swift  WorkingSetViews.swift
increment/IncrementProject/Increment.xcodeproj/: project.pbxproj
increment/IncrementProject/Increment.xcworkspace/: contents.xcworkspacedata
increment/IncrementProject/IncrementPackage/: Package.resolved  Package.swift
increment/IncrementProject/IncrementUITests/: IncrementUITests.swift
whatido/: whatido.py
(+60 files in other folders)
